--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>PSpeed Viewer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="controller_container" style="float: left;width: 20%;"></div>
+    <div id="controller_container" style="float: left;width: 320px;"></div>
     <div id="vis"></div>
     <!--
       This HTML file is a template.
