--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="controller_container" style="float: left;width: 320px;"></div>
-    <div id="vis"></div>
+    <div id="vis" style="max-width: 740px;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
